--- a/brand-webdesign-category.html
+++ b/brand-webdesign-category.html
@@ -8,7 +8,7 @@
             <span><p class="select-item-details">Building your brand with confidence.</p></span>
           </div>
           <img class="img-responsive" width="250" height="150" 
-          src="../images/brandmarketing.jpg" alt="UX Website">
+          src="../Lecture60/images/brandmarketing.jpg" alt="UX Website">
           </div>
           <br>
           <div class="select-item-price">$900  <span>(Basic Website)</span></div>
